add member getall
