# src/routers/member.router.ts
@@ -19,6 +19,7 @@ class MemberRouter {
 
   private init() {
     this.router.post('/init', this.initMember);
+    this.router.post('/getAll', this.getAllMember);
   }
 
   public async initMember(req: Request, res: Response) {
@@ -50,6 +51,34 @@ class MemberRouter {
 
       LOG('%s - Exit. 200', method);
       res.status(200).send(getResponse(true, 'Successfully init member', bcResp));
+    } catch (e) {
+      LOG('%s - Error: ', method, e);
+      res.status(500).send(getResponse(false, e.message));
+    }
+  }
+
+  public async getAllMember(req: Request, res: Response, next: NextFunction) {
+    const method = 'getAllMember';
+    try {
+      LOG('%s -Enter.', method);
+      LOG('%s - request body:\n%O', method, req.body);
+  
+      let userInfo: IUserInfo;
+      try {
+        userInfo = await MspWrapper.getUser((<any>req).token);
+        LOG('%s - Successfully get user info from MSP', method);
+      } catch (e) {
+        LOG('%s - Failed to chat with MSP error: %o', method, e);
+        if (e.code) {
+          return res.status(e.code).send(getResponse(false, e.message));
+        }
+        return res.status(400).send(getResponse(false, e.message));
+      }
+      LOG('%s - Successfully get user info from MSP', method);
+      const registry = await FabricService.createUserFromPersistance(userInfo.id, userInfo.privateKey, userInfo.certificate, userInfo.mspId);
+      const fabricService = new FabricService();
+      const bcResp = await fabricService.invoke('member.getall', [ ], registry);
+      res.status(200).send(getResponse(true, 'Success', bcResp));
     } catch (e) {
       LOG('%s - Error: ', method, e);
       res.status(500).send(getResponse(false, e.message));
